--- a/Etch-a-Sketch.html
+++ b/Etch-a-Sketch.html
@@ -10,37 +10,65 @@
 
 </head>
 <body>
-    <div id="container"></div>
+    <div class="heading">
+        <h1 class="title">Etch-a-Sketcher</h1>
+        <div class="btn-wrapper">
+            <button class="btn">Clear</button>
+        </div>
+    </div>
+    <div id="container-wrapper">
+        <div id="container"></div>
+    </div>
 </body>
 <style>
-
+    
     body{
-        margin: 0px;
+        margin: 0;
+    }
+
+    .title{
+        font-family: monospace;
+        font-size: 60px;
+        justify-content: center;
+    }
+
+    .btn{
+        margin: 70px 0 0 20px;
+    }
+
+    .heading{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    }
+
+    #container-wrapper{
+        justify-content: center;
+        display: flex;
     }
 
     #container{
-    display: grid;
-    grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-template-columns: repeat(var(--grid-cols), 1fr);
-   
+        margin: 0;
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: center;
+     text-align: center;
+     align-items: center;
+        max-width: 670px;
+    position: relative;
     }
 
-    .grid-item {
-  padding: 16.5px;
-  color: white;
-  text-align: center;
-}
+    .item{
+        background-color: black;
+        padding: 20px;
+        
+    }
 
     .new-grid-styles{
-        padding: 16.5px;
-  color: blue;
-  text-align: center;
-  background-color: blue;
+        padding: 20px;   
+        background-color: white;
     }
 
-/* :root {
-  --grid-cols: 1;
-  --grid-rows: 1;
-} */
+  
 </style>
 </html>
